# project-2_Egorov_M25-555

./: .gitignore  Makefile  README.md  demo.cast1_project2  demo.cast2_project2  demo.cast3_project2  demo.cast_project2  pyproject.toml
data/: users.json
src/primitive_db/: constants.py  core.py  decorators.py  engine.py  main.py  parser.py  utils.py
