[tool.poetry]
name = "project-2-egorov-m25-555"
version = "0.1.0"
description = "Primitive database project"
authors = ["Egorov Georgij <Egorovgoo@yandex.ru>"]
readme = "README.md"
packages = [
    { include = "src", from = "." },
]

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []