[tool.poetry]
name = "project-2-egorov-m25-555"
version = "0.1.1"
description = "Primitive database project"
authors = ["Egorov Georgij <Egorovgoo@yandex.ru>"]
readme = "README.md"
packages = [
    { include = "src", from = "." },
]

[tool.poetry.scripts]
database = "src.primitive_db.main:main"

# Указываем установку скриптов в ~/.local/bin
[tool.install]
scripts-dir = "~/.local/bin"

[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"
prettytable = "^3.16.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []