[tool.poetry]
name = "project-2-egorov-m25-555"
version = "0.1.1"
description = "Примитивная база данных с SQL-подобным синтаксисом"
authors = ["Egorov Georgij <Egorovgoo@yandex.ru>"]
readme = "README.md"
packages = [{include = "primitive_db", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
prettytable = "^3.16.0"
prompt = "^0.4.1"

[tool.poetry.scripts]
database = "primitive_db.main:main"
project = "primitive_db.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "UP", "YTT"]
ignore = []
target-version = "py38"

[tool.ruff.isort]
known-first-party = ["primitive_db"]
